--- a/package.json
+++ b/package.json
@@ -4,15 +4,24 @@
   "description": "",
   "main": "router.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "jest": "^24.9.0",
     "mongodb": "^3.3.3",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "supertest": "^4.0.2"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "coveragePathIgnorePatterns": [
+      "/node_modules/"
+    ]
   }
 }
