--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "content-filter": "^1.1.2",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "jest": "^24.9.0",
